fix diy-icons on index page

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container">
+                <div class="img-prod-container diy-icon">
                     <a href="product-25.html"><img class="img-responsive" src="images/products/pr25/love_n_geek_27_cover.JPG" alt=""></a>
 	            <div class="text1"><p>30 руб.</p></div>
                 </div>
@@ -238,7 +238,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container">
+                <div class="img-prod-container diy-icon">
                     <a href="product-26.html"><img class="img-responsive" src="images/products/pr26/love_n_geek_30_cover.JPG" alt=""></a>
 		    <div class="text1"><p>30 руб.</p></div>
                 </div>
@@ -253,7 +253,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container">
+                <div class="img-prod-container diy-icon">
                     <a href="product-27.html"><img class="img-responsive" src="images/products/pr27/love_n_geek_26_cover.JPG" alt=""></a>
 		    <div class="text1"><p>65 руб.</p></div>
                 </div>
@@ -598,7 +598,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container" href="product-2.html">
+                <div class="img-prod-container">
                     <a href="product-2.html"><img class="img-responsive" src="images/products/pr2/wiki_post_1.JPG" alt=""></a>
 		    <div class="text1"><p>10 руб.</p></div>
                 </div>
@@ -612,7 +612,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container" href="product-8.html">
+                <div class="img-prod-container diy-icon">
                     <a href="product-8.html"><img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt=""></a>
 		    <div class="text1"><p>12 руб.</p></div>
                 </div>
