--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-25.html"><img class="img-responsive" src="images/products/pr25/love_n_geek_27_cover.JPG" alt=""></a>
 	            <div class="text1"><p>30 руб.</p></div>
                 </div>
@@ -199,7 +199,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-22.html"><img class="img-responsive" src="images/products/pr22/share_road_cover_mini.jpg" alt=""></a>
 	            <div class="text1"><p>35 руб.</p></div>
                 </div>
@@ -238,7 +238,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-26.html"><img class="img-responsive" src="images/products/pr26/love_n_geek_30_cover.JPG" alt=""></a>
 		    <div class="text1"><p>30 руб.</p></div>
                 </div>
@@ -253,7 +253,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-27.html"><img class="img-responsive" src="images/products/pr27/love_n_geek_26_cover.JPG" alt=""></a>
 		    <div class="text1"><p>65 руб.</p></div>
                 </div>
@@ -288,7 +288,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-23.html"><img class="img-responsive" src="images/products/pr23/piratburo_cover_mini.jpg" alt=""></a>
 		    <div class="text1"><p>35 руб.</p></div>
                 </div>
@@ -303,7 +303,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-24.html"><img class="img-responsive" src="images/products/pr24/404_cover_mini.jpg" alt=""></a>
 		    <div class="text1"><p>35 руб.</p></div>
                 </div>
@@ -341,7 +341,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-19.html"><img class="img-responsive" src="images/products/pr19/fs_hoody_18_mini.JPG" alt=""></a>
 		    <div class="text1"><p>45 руб.</p></div>
                 </div>
@@ -356,7 +356,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-20.html"><img class="img-responsive" src="images/products/pr20/buby_hoody_18_mini.JPG" alt=""></a>
 		    <div class="text1"><p>45 руб.</p></div>
                 </div>
@@ -392,7 +392,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-16.html"><img class="img-responsive" src="images/products/pr16/packman_13_cover.JPG" alt=""></a>
 		    <div class="text1"><p>35 руб.</p></div>
                 </div>
@@ -407,7 +407,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-17.html"><img class="img-responsive" src="images/products/pr17/buby_1_10_mini_cover.JPG" alt=""></a>
 		    <div class="text1"><p>35 руб.</p></div>
                 </div>
@@ -458,7 +458,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-15.html"><img class="img-responsive" src="images/products/pr15/8bit_heart_cover.jpg" alt=""></a>
 		    <div class="text1"><p>35 руб.</p></div>
                 </div>
@@ -496,7 +496,7 @@ END Donate block -->
                 </div>                
 
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-13.html"><img class="img-responsive" src="images/products/pr13/space_invader_cover.jpg" alt=""></a>
 	            <div class="text1"><p>35 руб.</p></div>
                 </div>
@@ -512,7 +512,7 @@ END Donate block -->
                 </div>                
 
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-14.html"><img class="img-responsive" src="images/products/pr14/hoody_invader_cover.jpg" alt=""></a>
 		    <div class="text1"><p>65 руб.</p></div>
                 </div>
@@ -612,7 +612,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">
+                <div class="img-prod-container">
                     <a href="product-8.html"><img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt=""></a>
 		    <div class="text1"><p>12 руб.</p></div>
                 </div>
@@ -662,7 +662,7 @@ END Donate block -->
                                 </h3>
                 </div>                
 
-                <div class="img-prod-container diy-icon">		    
+                <div class="img-prod-container">		    
                     <a href="product-10.html"><img class="img-responsive" src="images/products/pr10/geek_shirt_4.jpg" alt=""></a>
 		  
 		    <div class="text1"><p>35 руб.</p></div>
