new t-shirt adn hoodie

--- a/product-36.html
+++ b/product-36.html
@@ -45,9 +45,9 @@
         <div class="row sticky-caption">
             <div class="col-sm-8">
                 <h1 class="caption-product page-header">
-                    Цішотка Пірацкі камітэт
+                    Цяльняшкі Пірацкі камітэт
                 </h1>
-                <h1 class="caption-price">35 руб.</h1>
+                <h1 class="caption-price">40 руб.</h1>
             </div>            
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
@@ -60,25 +60,30 @@
         <div class="row">
 
             <div class="col-md-8">
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_1_mini.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_2_mini.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_3_mini.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_4_mini.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr36/orange_pi_mini_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr36/orange_pi_mini_2.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr36/orange_pi_mini_4.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr36/black_pi_mini_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr36/black_pi_mini_3.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr36/black_pi_mini_5.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-              
 
-<p>На цішотцы - лагатып Пірацкага камітэта (Piratbyrån), швецкай некамерцыйнай арганізацыі, што займаецца прапагандай адмены капірайту. Ідэйная тэма для ўсіх, хто лічыць сучасны закон аб аўтарскім праве недасканалым і нават шкодным для развіцця культуры.</p>
+<p>На цяльняшцы - лагатып Пірацкага камітэта (Piratbyrån), швецкай некамерцыйнай арганізацыі, што займаецца прапагандай адмены капірайту. Ідэйная тэма для ўсіх, хто лічыць сучасны закон аб аўтарскім праве недасканалым і нават шкодным для развіцця культуры. Пірацкая цяльняшка падыходзіць і дзяўчынам і хлопцам.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/tree/master/pyrat-byran" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+<p>Сімвал на цяльняшцы таксама з'яўляецца часткай эмблемы пірацкай бухты - аднаго з легендарных торэнт-трэкераў, які падняў сцяг палітычных піратаў і барацьбу за свабодныя веды па ўсім свеце.</p>
+
+<p>Фота для Копімі цішоткі рабілася ў музеі <a href="https://bytespace.by" target="_blank">Рэтракамп'ютараў</a> у Мінску</p>
+
+<h4><a href="https://github.com/rizomaa/prints/blob/master/pyrat-byran" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Набыць цішотку з пірацкай касеткай і шукаць адзінадумцаў.</li>
-			<li>Апрануць цішотку і расшарыць сваю творчасць пад свабоднымі ліцэнзіямі.</li>
+			<li>Набыць цяльняшку з пірацкай касеткай і шукаць адзінадумцаў.</li>
+			<li>Апрануць цяльняшку і расшарыць сваю творчасць пад свабоднымі ліцэнзіямі.</li>
 			<li>Падарыць сяброўцы ці сябру, што слухае музыку з ВК і не саромеецца.</li>
 		</ul>
 
