--- a/index.html
+++ b/index.html
@@ -106,6 +106,59 @@ END Donate block -->
         <!-- /.row -->
 
 
+
+
+<!-- Projects Row -->
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">65 р</h3>
+                                <h3><a href="product-34.html">Худзі Пірацкі камітэт</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-31.html"><img class="img-responsive" src="images/products/pr34/hoody_pi_mini_cover.jpg" alt=""></a>
+	            <div class="text1"><p>65 руб.</p></div>
+                </div>
+
+            </div>
+
+
+ 	    <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">35 р</h3>
+                                <h3><a href="product-35.html">Цішотка Копімі</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-35.html"><img class="img-responsive" src="images/products/pr35/copy_me_mini_cover.jpg" alt=""></a>
+	            <div class="text1"><p>35 руб.</p></div>
+                </div>
+
+            </div>          
+
+  
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">40 р</h3>
+                                <h3><a href="product-36.html">Цяльняшкі Пірацкі камітэт</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-36.html"><img class="img-responsive" src="images/products/pr36/orange_pi_mini_cover.jpg" alt=""></a>
+	            <div class="text1"><p>40 руб.</p></div>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+
 <!-- Projects Row -->
         <div class="row products">
 
