--- a/product-35.html
+++ b/product-35.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="цішоткі, майкі, гік, гик, принты, на дзень народзінаў, на свята, майкі, цішоткі, саколкі, майки, прынты, Пірацкі камітэт, пірацкая цішотка, цішотка для лічбавага пірата, цішотка для музыкі, пиратское бюро, пиратская майка, майка для цифрового пирата, майка для музыканта, подарок музыканту, подарок цифровому пирату, падарунак для музыкі, падарунак для пірата, лічбавае пірацтва, цифровое пиратство.">
+    <meta name="description" content="цішоткі, майкі, гік, гик, принты, на дзень народзінаў, на свята, майкі, цішоткі, саколкі, майки, прынты, цішотка для праграміста, цішотка для сісадміна, майка для программиста, майка для сисадмина">
 
-    <title>Гік-лаўка - Цішотка Пірацкі камітэт</title>
+    <title>Гік-лаўка - Цішотка 404</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -45,46 +45,48 @@
         <div class="row sticky-caption">
             <div class="col-sm-8">
                 <h1 class="caption-product page-header">
-                    Цішотка Пірацкі камітэт
+                    Цішотка Копімі
                 </h1>
                 <h1 class="caption-price">35 руб.</h1>
-            </div>            
+            </div>   
             <div class="col-sm-4 caption-button">
                 <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
         <!-- /.row -->
-        
 
         <!-- Portfolio Item Row -->
         <div class="row">
 
             <div class="col-md-8">
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_1_mini.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_2_mini.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_3_mini.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr23/piratburo_4_mini.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr35/copy_me_mini_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr35/copy_me_mini_2.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr35/copy_me_mini_3.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr35/copy_me_mini_4.jpg" alt=""></p>
             </div>
+
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-              
+<p>У свеце ёсць супольнасць людзей, якая верыць, што капірававанне - гэта свяшчэнная каштоўнасць. Паслядоўнікі гэтай ідэі называюць сябе капімістамі, а сам рух капімізмам. Іх заклік людзіць адзін аднаго і шарыць інфармацыю.</p>
 
-<p>На цішотцы - лагатып Пірацкага камітэта (Piratbyrån), швецкай некамерцыйнай арганізацыі, што займаецца прапагандай адмены капірайту. Ідэйная тэма для ўсіх, хто лічыць сучасны закон аб аўтарскім праве недасканалым і нават шкодным для развіцця культуры.</p>
+<p>Прачытаць больш можна на старонках <a href="https://en.wikipedia.org/wiki/Missionary_Church_of_Kopimism" target="_blank">Вікіпедыі</a></p>
 
-<h4><a href="https://github.com/rizomaa/prints/tree/master/pyrat-byran" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+<p>Фота для Копімі цішоткі рабілася ў музеі <a href="https://bytespace.by" target="_blank">Рэтракамп'ютараў</a> у Мінску</p>
 
-		
+		<h4><a href="https://github.com/rizomaa/prints/blob/master/kopimi" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Набыць цішотку з пірацкай касеткай і шукаць адзінадумцаў.</li>
-			<li>Апрануць цішотку і расшарыць сваю творчасць пад свабоднымі ліцэнзіямі.</li>
-			<li>Падарыць сяброўцы ці сябру, што слухае музыку з ВК і не саромеецца.</li>
+			<li>Набыць цішотку і насіць яе ўсюды, такім чынам піярыць прынцыпы капімізма.</li>
+			<li>Зрабіць свой прынт Копімі, або скапіраваць з зыходнікаў і нанесці сабе на цішотку, худзі і іншыя адзенні.</li>
+			<li>Сфоткаць цішотку і шарыць інфармацыю пра яе ў сеціве.</li>
 		</ul>
 
 		<p><strong> Памер і колер цішоткі:</strong> пазначайце ў замове.</p>
-		<p>* Замовіць тавар можна праз кантактную форму </p>		
+
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
+
             </div>
 
         </div>
@@ -97,42 +99,40 @@
 
  <div class="container">
 
-
  <div class="row">
-            <div class="col-lg-12">
+           <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
- 		
-	<div class="col-md-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-1.html">Кансольныя паштоўкі</a></h3>
+                </div>
+                <a href="product-1.html">
+                    <img class="img-responsive" src="images/products/pr1/console_post_5.JPG" alt="">
+                </a>
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-7.html">Роварныя налепкі</a></h3>
+                </div>
+                <a href="product-7.html">
+                    <img class="img-responsive" src="images/products/pr7/rovar_5.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="col-md-4 portfolio-item">
 		<div class="caption">                               
-                   <h3><a href="product-10.html">Цішотка для гіка</a></h3>
+                   <h3><a href="product-4.html">Налепкі для Творчасці</a></h3>
                 </div>                
 
-                <a href="product-10.html">
-                    <img class="img-responsive" src="images/products/pr10/geek_shirt_4.jpg" alt="">
+                <a href="product-4.html">
+                    <img class="img-responsive" src="images/products/pr4/cc_nalepki_3.JPG" alt="">
                 </a>
-            </div>
-
-            <div class="col-md-4 portfolio-item">
-		<div class="caption">
- 			<h3><a href="product-16.html">DIY-цішоткі pacman </a></h3>
-                </div>
-                <a href="product-16.html">
-                    <img class="img-responsive" src="images/products/pr16/packman_13_cover.JPG" alt="">
-                </a>
-            </div>
-
-            <div class="col-md-4 portfolio-item">
-		<div class="caption">
- 			<h3><a href="product-14.html">Худзі Space Invader </a></h3>
-                </div>
-                <a href="product-14.html">
-                    <img class="img-responsive" src="images/products/pr14/hoody_invader_cover.jpg" alt="">
-                </a>
-            </div>
-
+            </div>       
         </div>
         <!-- /.row -->
+
 
 
 
