new t-shirt adn hoodie

--- a/product-34.html
+++ b/product-34.html
@@ -60,7 +60,7 @@
 
             <div class="col-md-8">
                 <p><img class="img-responsive" src="images/products/pr34/hoody_pi_mini_1.jpg" alt=""></p>
-		<p><img class="img-responsive" src="images/products/pr34/hoody_pi_mini_2.jpgg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr34/hoody_pi_mini_2.jpg" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr34/hoody_pi_mini_3.jpg" alt=""></p>
             </div>
 
