33-35 goods titles changed

--- a/product-34.html
+++ b/product-34.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="адкрыты код, open source, shell, bash, linux, лінукс, гік, гик, принты, худзі, джемпер, байка з прынтамі, байка с принтом, прынты, diy, 8 бит, 8 біт, 8 bit, space invader belarus, мемы, t-shirt, space invader">
 
-    <title>Гік-лаўка - Худзі Space Invader</title>
+    <title>DIY-байкi Пірацкі камітэт</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
