--- a/product-36.html
+++ b/product-36.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="цішоткі, майкі, гік, гик, принты, на дзень народзінаў, на свята, майкі, цішоткі, саколкі, майки, прынты, Пірацкі камітэт, пірацкая цішотка, цішотка для лічбавага пірата, цішотка для музыкі, пиратское бюро, пиратская майка, майка для цифрового пирата, майка для музыканта, подарок музыканту, подарок цифровому пирату, падарунак для музыкі, падарунак для пірата, лічбавае пірацтва, цифровое пиратство.">
 
-    <title>Гік-лаўка - Цішотка Пірацкі камітэт</title>
+    <title>Гік-лаўка - Цяльняшкі Пірацкі камітэт</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
