--- a/product-35.html
+++ b/product-35.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="цішоткі, майкі, гік, гик, принты, на дзень народзінаў, на свята, майкі, цішоткі, саколкі, майки, прынты, цішотка для праграміста, цішотка для сісадміна, майка для программиста, майка для сисадмина">
 
-    <title>Гік-лаўка - Цішотка 404</title>
+    <title>Гік-лаўка - Цішотка Копімі</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
