3 new goods added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,56 @@ END Donate block -->
         <!-- /.row -->
 
 
+<!-- Projects Row -->
+        <div class="row products">
+
+ 	    <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">35 р</h3>
+                                <h3><a href="product-38.html">Цішотка РадыёАктыўнасць</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-38.html"><img class="img-responsive" src="images/products/pr38/active_5.JPG" alt=""></a>
+	            <div class="text1"><p>35 руб.</p></div>
+                </div>
+
+            </div> 
+
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">35 р</h3>
+                                <h3><a href="product-37.html">Цішотка Шкодзер</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-37.html"><img class="img-responsive" src="images/products/pr37/shkoder_5.jpg" alt=""></a>
+	            <div class="text1"><p>35 руб.</p></div>
+                </div>
+
+            </div>
+
+  
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">35 р</h3>
+                                <h3><a href="product-39.html">Цішотка Boolean</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-39.html"><img class="img-responsive" src="images/products/pr39/boolean_2.jpg" alt=""></a>
+	            <div class="text1"><p>35 руб.</p></div>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
 
 
 <!-- Projects Row -->
